<resources>
    <string name="app_name">Screct Zone</string>
    <string name="matrix_en">matrix</string>
    <string name="matrix">矩阵</string>
    <string name="matrix_display_1">显示屏</string>
    <string name="matrix_calculate_1">计\n算</string>
    <string name="add_matrix">添加矩阵</string>
    <string name="markie">记号</string>
    <string name="edit_text_tip_1">A(字母组合)</string>
    <string name="edit_text_tip_2">(数字间用空格隔开,每行后回车)</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="A">A</string>
</resources>
